To implement translation service in Main.dart

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,6 @@
 {
-  "appName": "Conscious Closet",
+  "@@locale": "en",
+  "appName": "Closet Conscious",
   "signIn": "Sign In",
   "signUp": "Sign Up"
 }
