--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,5 +10,7 @@
   "SignupGoogle": "Sign up with Google",
   "SignupApple": "Sign up with Apple",
   "loginSuccess": "Welcome back! You are now logged in",
-  "loginFailed" : "Login failed. Please check your credentials and try again"
+  "loginFailed" : "Login failed. Please check your credentials and try again",
+  "offlineStatus" : "You are currently offline",
+  "retryConnection" : "Retry"
 }
