Got the basic logic of upload process done.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,17 +1,16 @@
 {
   "@@locale": "en",
-  "appName": "Closet Conscious",
-  "signIn": "Sign In",
-  "signUp": "Sign Up",
-  "signOut": "Sign Out",
-  "loginSocialAccount": "Login with your social account",
-  "loginGoogle": "Login with Google",
-  "loginApple": "Login with Apple",
-  "SignupSocialAccount": "Sign up with your Social Account",
-  "SignupGoogle": "Sign up with Google",
-  "SignupApple": "Sign up with Apple",
-  "loginSuccess": "Welcome back! You are now logged in",
-  "loginFailed" : "Login failed. Please check your credentials and try again",
+  "AppName": "Closet Conscious",
   "offlineStatus" : "You are currently offline",
-  "retryConnection" : "Retry"
+  "retryConnection" : "Retry",
+  "ItemNameLabel" : "Name",
+  "ItemNameHint" : "'What is the name of your item?",
+  "AmountLabel" : "Amount",
+  "AmountHint" : "'How much did the item cost?",
+  "ItemOccasionLabel" : "Occassion",
+  "ItemSeasonLabel" : "Season",
+  "ItemColourLabel" : "Colour",
+  "ItemColourVariationLabel" : "Colour Variation",
+  "ItemClothingTypeLabel" : "Clothing Type",
+  "ItemClothingLayerLabel" : "Clothing Layer"
 }
