--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1,17 +1,16 @@
 {
   "@@locale": "zh_CN",
-  "appName": "衣橱选择",
-  "signIn": "登入",
-  "signUp": "注册",
-  "signOut": "登出",
-  "loginSocialAccount": "登录您的社交帐户",
-  "loginGoogle": "使用谷歌登录",
-  "loginApple": "使用苹果登录",
-  "SignupSocialAccount": "注册您的社交帐户",
-  "SignupGoogle": "使用谷歌注册",
-  "SignupApple": "使用苹果注册",
-  "loginSuccess": "欢迎回来！您现在已登录",
-  "loginFailed" : "登录失败。请检查您的凭据并重试",
+  "AppName": "衣橱选择",
   "offlineStatus" : "离线状态",
-  "retryConnection" : "重试连接"
+  "retryConnection" : "重试连接",
+  "ItemNameLabel" : "物品名称",
+  "ItemNameHint" : "'您的商品名称是什么？",
+  "AmountLabel" : "物品成本",
+  "AmountHint" : "'物品花了多少钱",
+  "ItemOccasionLabel" : "场合",
+  "ItemSeasonLabel" : "季节",
+  "ItemColourLabel" : "颜色",
+  "ItemColourVariationLabel" : "颜色变化",
+  "ItemClothingTypeLabel" : "服装类型",
+  "ItemClothingLayerLabel" : "服装层"
 }
