--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1,16 +1,100 @@
 {
   "@@locale": "zh_CN",
-  "AppName": "衣橱选择",
-  "offlineStatus" : "离线状态",
-  "retryConnection" : "重试连接",
-  "ItemNameLabel" : "物品名称",
-  "ItemNameHint" : "'您的商品名称是什么？",
-  "AmountLabel" : "物品成本",
-  "AmountHint" : "'物品花了多少钱",
+  "AppName": "环保衣橱",
+  "offlineStatus" : "您当前处于离线状态",
+  "retryConnection" : "重试",
+  "ItemNameLabel" : "名称",
+  "ItemNameHint" : "您的物品名称是什么？",
+  "AmountLabel" : "金额",
+  "AmountHint" : "这件物品花费了多少钱？",
   "ItemOccasionLabel" : "场合",
   "ItemSeasonLabel" : "季节",
   "ItemColourLabel" : "颜色",
   "ItemColourVariationLabel" : "颜色变化",
   "ItemClothingTypeLabel" : "服装类型",
-  "ItemClothingLayerLabel" : "服装层"
+  "ItemClothingLayerLabel" : "服装层次",
+  "seasons_spring": "春季",
+  "seasons_summer": "夏季",
+  "seasons_autumn": "秋季",
+  "seasons_winter": "冬季",
+  "seasons_multi": "多季",
+  "clothingTypes_top": "上装",
+  "clothingTypes_bottom": "下装",
+  "clothingTypes_onePiece": "连体衣",
+  "clothingLayers_base": "基础层",
+  "clothingLayers_mid": "中间层",
+  "clothingLayers_outer": "外层",
+  "colors_red": "红色",
+  "colors_blue": "蓝色",
+  "colors_green": "绿色",
+  "colors_yellow": "黄色",
+  "colors_brown": "棕色",
+  "colors_grey": "灰色",
+  "colors_rainbow": "彩虹色",
+  "colors_black": "黑色",
+  "colors_white": "白色",
+  "colorVariations_light": "浅色",
+  "colorVariations_medium": "中间色",
+  "colorVariations_dark": "深色",
+  "accessoryTypes_bag": "包",
+  "accessoryTypes_belt": "腰带",
+  "accessoryTypes_eyewear": "眼镜",
+  "accessoryTypes_gloves": "手套",
+  "accessoryTypes_hat": "帽子",
+  "accessoryTypes_jewellery": "珠宝",
+  "accessoryTypes_scarf": "围巾",
+  "accessoryTypes_tie": "领带",
+  "itemGeneralTypes_clothing": "服装",
+  "itemGeneralTypes_shoes": "鞋子",
+  "itemGeneralTypes_accessory": "配饰",
+  "shoeTypes_boots": "靴子",
+  "shoeTypes_casual": "休闲鞋",
+  "shoeTypes_athletic": "运动鞋",
+  "shoeTypes_formal": "正式鞋",
+  "shoeTypes_niche": "小众鞋",
+  "occasions_active": "运动",
+  "occasions_casual": "休闲",
+  "occasions_workplace": "工作场合",
+  "occasions_social": "社交",
+  "occasions_event": "活动",
+  "upload_upload": "上传",
+  "filter_filter": "筛选",
+  "addCloset_addCloset": "添加衣橱",
+  "itemUploaded_itemUploaded": "物品已上传",
+  "myClosetTitle": "我的衣橱",
+  "closetUploadComplete": "衣橱上传完成",
+  "closetLabel": "衣橱",
+  "outfitLabel": "穿搭",
+  "itemNameLabel": "物品名称",
+  "pleaseEnterItemName": "请输入物品名称",
+  "amountSpentLabel": "花费金额",
+  "enterAmountSpentHint": "输入花费金额",
+  "selectItemType": "选择物品类型",
+  "selectOccasion": "选择场合",
+  "selectSeason": "选择季节",
+  "selectShoeType": "选择鞋子类型",
+  "selectAccessoryType": "选择配饰类型",
+  "selectClothingType": "选择衣物类型",
+  "selectClothingLayer": "选择衣物层次",
+  "selectColour": "选择颜色",
+  "selectColourVariation": "选择颜色变化",
+  "update": "更新",
+  "archived": "已归档",
+  "item_name": "物品名称",
+  "please_enter_item_name": "请输入物品名称",
+  "amount_spent": "花费金额",
+  "enter_amount_spent": "输入花费金额",
+  "select_item_type": "选择物品类型",
+  "select_occasion": "选择场合",
+  "select_season": "选择季节",
+  "select_shoe_type": "选择鞋子类型",
+  "select_accessory_type": "选择配饰类型",
+  "select_clothing_type": "选择衣物类型",
+  "select_clothing_layer": "选择衣物层次",
+  "select_colour": "选择颜色",
+  "select_colour_variation": "选择颜色变化",
+  "please_enter_valid_amount": "请输入有效金额（0或更高）。",
+  "upload": "上传",
+  "next": "下一步"
+
 }
