Due to translation, not being about to send to Supabase backend, now changing keys to be the english text that can be sent to backend.

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -13,50 +13,50 @@
   "ItemColourVariationLabel" : "颜色变化",
   "ItemClothingTypeLabel" : "服装类型",
   "ItemClothingLayerLabel" : "服装层次",
-  "seasons_spring": "春季",
-  "seasons_summer": "夏季",
-  "seasons_autumn": "秋季",
-  "seasons_winter": "冬季",
-  "seasons_multi": "多季",
-  "clothingTypes_top": "上装",
-  "clothingTypes_bottom": "下装",
-  "clothingTypes_onePiece": "连体衣",
-  "clothingLayers_base": "基础层",
-  "clothingLayers_mid": "中间层",
-  "clothingLayers_outer": "外层",
-  "colors_red": "红色",
-  "colors_blue": "蓝色",
-  "colors_green": "绿色",
-  "colors_yellow": "黄色",
-  "colors_brown": "棕色",
-  "colors_grey": "灰色",
-  "colors_rainbow": "彩虹色",
-  "colors_black": "黑色",
-  "colors_white": "白色",
-  "colorVariations_light": "浅色",
-  "colorVariations_medium": "中间色",
-  "colorVariations_dark": "深色",
-  "accessoryTypes_bag": "包",
-  "accessoryTypes_belt": "腰带",
-  "accessoryTypes_eyewear": "眼镜",
-  "accessoryTypes_gloves": "手套",
-  "accessoryTypes_hat": "帽子",
-  "accessoryTypes_jewellery": "珠宝",
-  "accessoryTypes_scarf": "围巾",
-  "accessoryTypes_tie": "领带",
-  "itemGeneralTypes_clothing": "服装",
-  "itemGeneralTypes_shoes": "鞋子",
-  "itemGeneralTypes_accessory": "配饰",
-  "shoeTypes_boots": "靴子",
-  "shoeTypes_casual": "休闲鞋",
-  "shoeTypes_athletic": "运动鞋",
-  "shoeTypes_formal": "正式鞋",
-  "shoeTypes_niche": "小众鞋",
-  "occasions_active": "运动",
-  "occasions_casual": "休闲",
-  "occasions_workplace": "工作场合",
-  "occasions_social": "社交",
-  "occasions_event": "活动",
+  "Spring": "春季",
+  "Summer": "夏季",
+  "Autumn": "秋季",
+  "Winter": "冬季",
+  "Multi": "多季",
+  "Top": "上装",
+  "Bottom": "下装",
+  "OnePiece": "连体衣",
+  "Base": "基础层",
+  "Mid": "中间层",
+  "Outer": "外层",
+  "Red": "红色",
+  "Blue": "蓝色",
+  "Green": "绿色",
+  "Yellow": "黄色",
+  "Brown": "棕色",
+  "Grey": "灰色",
+  "Rainbow": "彩虹色",
+  "Black": "黑色",
+  "White": "白色",
+  "Light": "浅色",
+  "Medium": "中间色",
+  "Dark": "深色",
+  "Bag": "包",
+  "Belt": "腰带",
+  "Eyewear": "眼镜",
+  "Gloves": "手套",
+  "Hat": "帽子",
+  "Jewellery": "珠宝",
+  "Scarf": "围巾",
+  "Tie": "领带",
+  "Clothing": "服装",
+  "Shoes": "鞋子",
+  "Accessory": "配饰",
+  "Boots": "靴子",
+  "Everyday": "休闲鞋",
+  "Athletic": "运动鞋",
+  "Formal": "正式鞋",
+  "Niche": "小众鞋",
+  "Active": "运动",
+  "Casual": "休闲",
+  "Workplace": "工作场合",
+  "Social": "社交",
+  "Event": "活动",
   "upload_upload": "上传",
   "filter_filter": "筛选",
   "addCloset_addCloset": "添加衣橱",
@@ -80,21 +80,15 @@
   "selectColourVariation": "选择颜色变化",
   "update": "更新",
   "archived": "已归档",
-  "item_name": "物品名称",
-  "please_enter_item_name": "请输入物品名称",
-  "amount_spent": "花费金额",
-  "enter_amount_spent": "输入花费金额",
-  "select_item_type": "选择物品类型",
-  "select_occasion": "选择场合",
-  "select_season": "选择季节",
-  "select_shoe_type": "选择鞋子类型",
-  "select_accessory_type": "选择配饰类型",
-  "select_clothing_type": "选择衣物类型",
-  "select_clothing_layer": "选择衣物层次",
-  "select_colour": "选择颜色",
-  "select_colour_variation": "选择颜色变化",
-  "please_enter_valid_amount": "请输入有效金额（0或更高）。",
   "upload": "上传",
-  "next": "下一步"
-
+  "next": "下一步",
+  "itemNameFieldNotFilled": "项目名称字段未填写。",
+  "amountSpentFieldNotValid": "花费金额字段无效。",
+  "itemTypeFieldNotFilled": "项目类型字段未填写。",
+  "occasionFieldNotFilled": "场合字段未填写。",
+  "seasonFieldNotFilled": "季节字段未填写。",
+  "specificTypeFieldNotFilled": "具体类型字段未填写。",
+  "clothingLayerFieldNotFilled": "衣物层级字段未填写。",
+  "colourFieldNotFilled": "颜色字段未填写。",
+  "colourVariationFieldNotFilled": "颜色变化字段未填写。"
 }
