--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,50 +13,50 @@
   "ItemColourVariationLabel" : "Colour Variation",
   "ItemClothingTypeLabel" : "Clothing Type",
   "ItemClothingLayerLabel" : "Clothing Layer",
-  "seasons_spring": "Spring",
-  "seasons_summer": "Summer",
-  "seasons_autumn": "Autumn",
-  "seasons_winter": "Winter",
-  "seasons_multi": "Multi",
-  "clothingTypes_top": "Top",
-  "clothingTypes_bottom": "Bottom",
-  "clothingTypes_onePiece": "One Piece",
-  "clothingLayers_base": "Base",
-  "clothingLayers_mid": "Mid",
-  "clothingLayers_outer": "Outer",
-  "colors_red": "Red",
-  "colors_blue": "Blue",
-  "colors_green": "Green",
-  "colors_yellow": "Yellow",
-  "colors_brown": "Brown",
-  "colors_grey": "Grey",
-  "colors_rainbow": "Rainbow",
-  "colors_black": "Black",
-  "colors_white": "White",
-  "colorVariations_light": "Light",
-  "colorVariations_medium": "Medium",
-  "colorVariations_dark": "Dark",
-  "accessoryTypes_bag": "Bag",
-  "accessoryTypes_belt": "Belt",
-  "accessoryTypes_eyewear": "Eyewear",
-  "accessoryTypes_gloves": "Gloves",
-  "accessoryTypes_hat": "Hat",
-  "accessoryTypes_jewellery": "Jewellery",
-  "accessoryTypes_scarf": "Scarf",
-  "accessoryTypes_tie": "Tie",
-  "itemGeneralTypes_clothing": "Clothing",
-  "itemGeneralTypes_shoes": "Shoes",
-  "itemGeneralTypes_accessory": "Accessory",
-  "shoeTypes_boots": "Boots",
-  "shoeTypes_casual": "Casual",
-  "shoeTypes_athletic": "Athletic",
-  "shoeTypes_formal": "Formal",
-  "shoeTypes_niche": "Niche",
-  "occasions_active": "Active",
-  "occasions_casual": "Casual",
-  "occasions_workplace": "Workplace",
-  "occasions_social": "Social",
-  "occasions_event": "Event",
+  "Spring": "Spring",
+  "Summer": "Summer",
+  "Autumn": "Autumn",
+  "Winter": "Winter",
+  "Multi": "Multi",
+  "Top": "Top",
+  "Bottom": "Bottom",
+  "OnePiece": "One Piece",
+  "Base": "Base",
+  "Mid": "Mid",
+  "Outer": "Outer",
+  "Red": "Red",
+  "Blue": "Blue",
+  "Green": "Green",
+  "Yellow": "Yellow",
+  "Brown": "Brown",
+  "Grey": "Grey",
+  "Rainbow": "Rainbow",
+  "Black": "Black",
+  "White": "White",
+  "Light": "Light",
+  "Medium": "Medium",
+  "Dark": "Dark",
+  "Bag": "Bag",
+  "Belt": "Belt",
+  "Eyewear": "Eyewear",
+  "Gloves": "Gloves",
+  "Hat": "Hat",
+  "Jewellery": "Jewellery",
+  "Scarf": "Scarf",
+  "Tie": "Tie",
+  "Clothing": "Clothing",
+  "Shoes": "Shoes",
+  "Accessory": "Accessory",
+  "Boots": "Boots",
+  "Everyday": "Everyday",
+  "Athletic": "Athletic",
+  "Formal": "Formal",
+  "Niche": "Niche",
+  "Active": "Active",
+  "Casual": "Casual",
+  "Workplace": "Workplace",
+  "Social": "Social",
+  "Event": "Event",
   "upload_upload": "Upload",
   "filter_filter": "Filter",
   "addCloset_addCloset": "Add Closet",
@@ -78,22 +78,19 @@
   "selectClothingLayer": "Select Clothing Layer",
   "selectColour": "Select Colour",
   "selectColourVariation": "Select Colour Variation",
+  "please_enter_valid_amount": "Please enter a valid amount (0 or greater).",
   "update": "Update",
   "archived": "Archived",
   "item_name": "Item Name",
-  "please_enter_item_name": "Please enter an item name",
-  "amount_spent": "Amount Spent",
-  "enter_amount_spent": "Enter amount spent",
-  "select_item_type": "Select Item Type",
-  "select_occasion": "Select Occasion",
-  "select_season": "Select Season",
-  "select_shoe_type": "Select Shoe Type",
-  "select_accessory_type": "Select Accessory Type",
-  "select_clothing_type": "Select Clothing Type",
-  "select_clothing_layer": "Select Clothing Layer",
-  "select_colour": "Select Colour",
-  "select_colour_variation": "Select Colour Variation",
-  "please_enter_valid_amount": "Please enter a valid amount (0 or greater).",
   "upload": "Upload",
-  "next": "Next"
+  "next": "Next",
+  "itemNameFieldNotFilled": "Item Name field is not filled.",
+  "amountSpentFieldNotValid": "Amount Spent field is not valid.",
+  "itemTypeFieldNotFilled": "Item Type field is not filled.",
+  "occasionFieldNotFilled": "Occasion field is not filled.",
+  "seasonFieldNotFilled": "Season field is not filled.",
+  "specificTypeFieldNotFilled": "Specific Type field is not filled.",
+  "clothingLayerFieldNotFilled": "Clothing Layer field is not filled.",
+  "colourFieldNotFilled": "Colour field is not filled.",
+  "colourVariationFieldNotFilled": "Colour Variation field is not filled."
 }
