Work on standardizing the text and colour

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -95,5 +95,6 @@
   "colourVariationFieldNotFilled": "Colour Variation field is not filled.",
   "filterSearchPremiumFeature": "Filter & Search Premium Feature",
   "quicklyFindItems": "Quickly find items with filter and search options, saving time and staying organized.",
-  "interested": "Interested"
+  "interested": "Interested",
+  "editPageTitle": "Edit Item"
 }
