--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -93,5 +93,7 @@
   "colourVariationFieldNotFilled": "颜色变化字段未填写。",
   "filterSearchPremiumFeature": "筛选和搜索高级功能",
   "quicklyFindItems": "通过筛选和搜索选项快速找到物品，节省时间并保持井井有条。",
-  "interested": "感兴趣"
+  "interested": "感兴趣",
+  "editPageTitle": "编辑项目"
+
 }
