--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -78,8 +78,10 @@
   "selectClothingLayer": "选择衣物层次",
   "selectColour": "选择颜色",
   "selectColourVariation": "选择颜色变化",
+  "please_enter_valid_amount": "请输入一个有效的金额（0或更大）。",
   "update": "更新",
   "archived": "已归档",
+  "item_name": "物品名称",
   "upload": "上传",
   "next": "下一步",
   "itemNameFieldNotFilled": "项目名称字段未填写。",
@@ -95,5 +97,4 @@
   "quicklyFindItems": "通过筛选和搜索选项快速找到物品，节省时间并保持井井有条。",
   "interested": "感兴趣",
   "editPageTitle": "编辑项目"
-
 }
