--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -96,5 +96,15 @@
   "filterSearchPremiumFeature": "筛选和搜索高级功能",
   "quicklyFindItems": "通过筛选和搜索选项快速找到物品，节省时间并保持井井有条。",
   "interested": "感兴趣",
-  "editPageTitle": "编辑项目"
+  "editPageTitle": "编辑项目",
+  "multiClosetFeatureTitle": "发现我们的新多衣橱功能",
+  "multiClosetFeatureDescription": "通过即将推出的多衣橱功能轻松管理多个衣橱。感兴趣吗？",
+  "thankYou": "谢谢！",
+  "interestAcknowledged": "您的兴趣已被记录。请关注更新。",
+  "ok": "好的",
+  "Sell": "出售",
+  "Swap": "交换",
+  "Gift": "赠送",
+  "Throw": "扔掉",
+  "archiveOptions" : "你想做什么？"
 }
