--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -80,7 +80,7 @@
   "selectColourVariation": "选择颜色变化",
   "please_enter_valid_amount": "请输入一个有效的金额（0或更大）。",
   "update": "更新",
-  "archived": "已归档",
+  "declutter": "整理",
   "item_name": "物品名称",
   "upload": "上传",
   "next": "下一步",
@@ -106,5 +106,5 @@
   "Swap": "交换",
   "Gift": "赠送",
   "Throw": "扔掉",
-  "archiveOptions" : "你想做什么？"
+  "declutterOptions" : "你想做什么？"
 }
