Update the homepage to use text theme and created state management for upload_item_page.dart

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,7 @@
 {
   "@@locale": "en",
-  "AppName": "Closet Conscious",
+  "AppName": "ClosetConscious",
+  "tagline": "ShopYourCloset",
   "offlineStatus" : "You are currently offline",
   "retryConnection" : "Retry",
   "ItemNameLabel" : "Name",
