Updated drawer file to make UI work. Still have to fix the business logic.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -118,11 +118,9 @@
   "achievements": "Achievements",
   "usageInsights": "Usage Insights",
   "appInformationSection": "App Information",
-  "policy": "Policy",
-  "news": "News",
+  "infoHub": "Info Hub",
   "supportAssistanceSection": "Support & Assistance",
   "becomeAmbassador": "Become an Ambassador",
-  "faq": "FAQ",
   "contactUs": "Contact Us",
   "deleteAccount": "Delete Account",
   "logOut": "Log Out",
