--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -118,11 +118,9 @@
   "achievements": "成就",
   "usageInsights": "使用洞察",
   "appInformationSection": "应用信息",
-  "policy": "政策",
-  "news": "新闻",
+  "infoHub": "信息中心",
   "supportAssistanceSection": "支持与协助",
   "becomeAmbassador": "成为大使",
-  "faq": "常见问题",
   "contactUs": "联系我们",
   "deleteAccount": "删除账户",
   "logOut": "退出登录",
