Standardization of how drawer looks

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -63,6 +63,7 @@
   "addCloset_addCloset": "Add Closet",
   "itemUploaded_itemUploaded": "Item Uploaded",
   "myClosetTitle": "My Closet",
+  "myOutfitTitle": "Create My Outfit",
   "closetUploadComplete": "Closet Upload Complete",
   "closetLabel": "Closet",
   "outfitLabel": "Outfit",
