--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -63,6 +63,7 @@
   "addCloset_addCloset": "添加衣橱",
   "itemUploaded_itemUploaded": "物品已上传",
   "myClosetTitle": "我的衣橱",
+  "myOutfitTitle": "搭配我的穿搭",
   "closetUploadComplete": "衣橱上传完成",
   "closetLabel": "衣橱",
   "outfitLabel": "穿搭",
