analytics_premium_bottom_sheet.dart work, need to trigger theme updates

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -101,6 +101,8 @@
   "editPageTitle": "Edit Item",
   "multiClosetFeatureTitle": "Discover Our New Multi-Closet Feature",
   "multiClosetFeatureDescription": "Manage multiple closets effortlessly with our upcoming multi-closet feature. Interested?",
+  "AnalyticsSearchPremiumFeature": "Register for Style Analytics Premium Feature",
+  "trackAnalyticsDescription": "Gain deep insights into your wardrobe, helping you optimize usage, track spending, and discover your personal style.",
   "thankYou": "Thank You!",
   "interestAcknowledged": "Your interest has been noted. Stay tuned for updates.",
   "ok": "OK",
