--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -97,6 +97,8 @@
   "colourVariationFieldNotFilled": "颜色变化字段未填写。",
   "filterSearchPremiumFeature": "筛选和搜索高级功能",
   "quicklyFindItems": "通过筛选和搜索选项快速找到物品，节省时间并保持井井有条。",
+  "AnalyticsSearchPremiumFeature": "注册风格分析高级功能",
+  "trackAnalyticsDescription": "深入了解您的衣橱，帮助您优化使用、追踪花费，并发现您的个人风格。",
   "interested": "感兴趣",
   "editPageTitle": "编辑项目",
   "multiClosetFeatureTitle": "发现我们的新多衣橱功能",
